# arealights

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: Clustering.fs  Clustering.fs.glsl  Clustering.vs  DebugShader.fs.glsl  DebugShader.vs  DeferredGeometryPass.fs  DeferredGeometryPass.vs  GeometryPass.fs.glsl  GroundTruthGTR.fs.glsl  LTC.fs  LTC.fs.glsl  PointLightCluster.fs  PointLightCluster.fs.glsl  SphereLightVolume.fs  SphereLightVolume.vs  TextureBlit.fs  TextureBlit.fs.glsl  TextureBlit.vs  TextureBlitToSRGB.fs.glsl
assets/lookups/: heitz_tables.ltc  result.ltc  result_16x16.ltc  result_64x64.ltc  result_64x64_old.ltc  result_8x8.ltc
assets/shaderlib/: cookTorrance.glsl  gbuffer.glsl
assets/textures/blue_marble/: README.txt
assets/textures/herringbone/: Source.txt
assets/textures/metal_plate/: README.txt
assets/textures/textures.com/: README.txt  TexturesCom_Marble_Checkerboard_1K_roughness.tif  TexturesCom_Metal_CopperPolished_1K_albedo.tif  TexturesCom_Metal_CopperPolished_1K_metallic.tif  TexturesCom_Metal_CopperPolished_1K_roughness.tif  TexturesCom_Plastic_PolypropyleneRough_1K_roughness.tif  TexturesCom_Tiles_CheckerboardVintage_1K_roughness.tif
dependencies/glad-lib/include/glad/: glad.h
dependencies/glad-lib/src/: glad.c
source/: Application.cpp  Application.hpp  ArealightConfigurationUI.cpp  ArealightConfigurationUI.hpp  BasicMeshes.cpp  BasicMeshes.hpp  Common.cpp  Common.hpp  DeferredRenderingPipeline.cpp  DeferredRenderingPipeline.hpp  Effect.cpp  Framework.hpp  FreeCamera.cpp  FreeCamera.hpp  FreeCameraInputMapper.cpp  FreeCameraInputMapper.hpp  GroundTruth.hpp  ImGuiApplication.hpp  Interface.cpp  Interface.hpp  LinearlyTransformedCosines.cpp  LinearlyTransformedCosines.hpp  Main.cpp  Material.cpp  Material.hpp  OpenGL.hpp  OpenGLApplication.hpp  PointLightCluster.cpp  PointLightCluster.hpp  PolygonalLight.hpp  RenderHelper.cpp  RenderHelper.hpp  SceneUI.cpp  SceneUI.hpp  Shaders.cpp  Shaders.hpp  Texture.cpp  Texture.hpp  TextureUtils.cpp  Vertices.cpp  (+2 more)
source/common/: StreamUtils.cpp  StreamUtils.hpp
source/framework/: BasicMeshes.cpp  BasicMeshes.hpp  DebugOutput.cpp  DebugOutput.hpp  Effect.hpp  Framework.cpp  FreeCameraInputMapper.cpp  FreeCameraInputMapper.hpp  ImGuiApplication.cpp  ImGuiBinding.cpp  ImGuiBinding.hpp  ImGuiExtensions.cpp  ImGuiExtensions.hpp  Logging.hpp  Mesh.hpp  OpenGLApplication.cpp  OrbitingCamera.cpp  OrbitingCamera.hpp  Shaders.cpp  StbImplementation.c  Texture.cpp  Texture.hpp  TextureUtils.cpp  TextureUtils.hpp
source/framework/common/: Exceptions.hpp
source/framework/inputs/: GenericKeyboardInput.cpp  GenericKeyboardInput.hpp  IMouseInput.hpp  InputStates.hpp
source/ground_truth/: GroundTruth.cpp  GroundTruth.hpp
source/inputs/: GenericMouseInput.cpp  GenericMouseInput.hpp  IKeyboardInput.hpp
source/interface/: IInterfaceView.hpp  Interface.cpp  Interface.hpp  LightInterface.cpp  LightInterface.hpp  PointLightClusterInterface.cpp  PointLightClusterInterface.hpp  SceneInterface.cpp  SceneInterface.hpp
source/ltc/: LinearlyTransformedCosines.cpp  LinearlyTransformedCosines.hpp
source/ltc/computed/: ltc_fit.hpp
source/point_light_cluster/: PLCConfigurationUI.cpp  PLCConfigurationUI.hpp  PointLightCluster.cpp  PointLightCluster.hpp
